library_includedir = $(includedir)/fusekit
library_include_HEADERS = fusekit/basic_directory.h 
library_include_HEADERS += fusekit/basic_entry.h 
library_include_HEADERS += fusekit/basic_file.h 
library_include_HEADERS += fusekit/daemon.h 
library_include_HEADERS += fusekit/default_directory.h 
library_include_HEADERS += fusekit/default_permissions.h 
library_include_HEADERS += fusekit/default_time.h 	
library_include_HEADERS += fusekit/directory_node.h 
library_include_HEADERS += fusekit/directory_factory.h 		
library_include_HEADERS += fusekit/entry.h 
library_include_HEADERS += fusekit/file_factory.h 	
library_include_HEADERS += fusekit/file_handle.h 	
library_include_HEADERS += fusekit/file_node.h
library_include_HEADERS += fusekit/generic_buffer.h
library_include_HEADERS += fusekit/new_creator.h
library_include_HEADERS += fusekit/no_buffer.h 	
library_include_HEADERS += fusekit/no_creator.h
library_include_HEADERS += fusekit/no_entry.h 	
library_include_HEADERS += fusekit/no_lock.h 	
library_include_HEADERS += fusekit/no_stream_reader.h 	
library_include_HEADERS += fusekit/no_stream_writer.h 	
library_include_HEADERS += fusekit/no_time.h 	
library_include_HEADERS += fusekit/path.h 
library_include_HEADERS += fusekit/stream_callback_file.h 	
library_include_HEADERS += fusekit/stream_function_file.h 	
library_include_HEADERS += fusekit/stream_object_file.h 	
library_include_HEADERS += fusekit/stream_reader.h 	
library_include_HEADERS += fusekit/stream_writer.h 	
library_include_HEADERS += fusekit/tracer_buffer.h 	
library_include_HEADERS += fusekit/time_fields.h 	
library_include_HEADERS += fusekit/type_reader.h 	
library_include_HEADERS += fusekit/type_writer.h 	

