noinst_PROGRAMS = hellofs 
noinst_PROGRAMS += hellotr1fs
noinst_PROGRAMS += tracefs 
noinst_PROGRAMS += streamobjectfs
noinst_PROGRAMS += specialfs
noinst_PROGRAMS += foldersfs
noinst_PROGRAMS += callbackfs 
noinst_PROGRAMS += callbacktr1fs
noinst_PROGRAMS += customdelimiterfs
noinst_PROGRAMS += appendfs
callbackfs_SOURCES = callback.cpp 
callbacktr1fs_SOURCES = callback_tr1.cpp 
hellofs_SOURCES = hello.cpp 
hellotr1fs_SOURCES = hello_tr1.cpp 
tracefs_SOURCES = trace.cpp
streamobjectfs_SOURCES = stream_object.cpp
specialfs_SOURCES = special.cpp
foldersfs_SOURCES = folders.cpp
appendfs_SOURCES = append.cpp
customdelimiterfs_SOURCES = custom_delimiter.cpp

AM_CPPFLAGS = -I$(top_builddir)/include


